Changing ConsoleApp Folder

--- a/src/ConsoleApp/FM.ParcelDist.ConsoleApp.csproj
+++ b/src/ConsoleApp/FM.ParcelDist.ConsoleApp.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\FM.ParcelDist.Core.csproj" />
+    <ProjectReference Include="..\Core\FM.ParcelDist.Core.csproj" />
   </ItemGroup>
 
 </Project>
